# gift-finder

amazon-crawler/: Cargo.toml  data.c.json  data.csv  data.json  notes.txt  products.csv  sample.html  top.csv  user-agents.csv
amazon-crawler/src/: comments.rs  common.rs  main.rs  product.rs  request_manager.rs
