[package]
name = "amazon-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest={ version = "0.11.10", features = [ "gzip"] }
scraper= "0.12.0"
tokio={version = "1.17.0", features = ["full"]}
lazy_static= "1.4.0"
serde= {version = "1.0.136", features = ["derive"]}
serde_json={version = "1.0.79"}